# keebs

./: .gitignore  .gitmodules  README.md  pyproject.toml
RP2040/: ._code.py  Makefile  README.md  boot_out.txt  code.py  settings.toml
RP2040/adafruit-circuitpython-bundle-8.x-mpy-20230428/: VERSIONS.txt
